# ai-chatbot-app

./: .gitignore  README.md  analyze-project.sh  docker-compose.yml  package.json  setup-database.sh  setup-demo.sh
apps/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  test_structure.py
apps/backend/alembic/: env.py
apps/backend/app/: main.py  main.py.backup  main.py.original
apps/backend/app/api/: api.py  deps.py
apps/backend/app/api/v1/: api.py
apps/backend/app/api/v1/endpoints/: auth.py  chat.py  health.py  websocket.py
apps/backend/app/core/: config.py  security.py  websocket_manager.py
apps/backend/app/crud/: __init__.py  chat.py  user.py
apps/backend/app/models/: __init__.py  chat.py  user.py
apps/backend/app/schemas/: __init__.py  auth.py  chat.py  user.py
apps/backend/app/services/: __init__.py  ai_service.py  auth_service.py
apps/backend/scripts/: seed.py
apps/backend/tests/: test_auth.py  test_chat.py
